also show the poster on small devices

--- a/css/style.less
+++ b/css/style.less
@@ -78,6 +78,17 @@ table.movies {
 		box-shadow: 0 10px 6px -6px #777;
 	}
 
+	.poster-small {
+		float: left;
+		margin-right: 1em;
+		margin-bottom: 1em;
+
+		&:after {
+			content: '';
+			clear: both;
+		}
+	}
+
 	.addToSelection {
 		background-color: #5da423;
 		color: white;
