--- a/css/style.less
+++ b/css/style.less
@@ -36,10 +36,20 @@ body {
 }
 
 table.movies {
-	tbody tr:hover {
+	tbody tr:hover,
+	tbody tr.sel:hover {
 		cursor: pointer;
 		background-color: #333;
 		box-shadow: inset 0 0 2px black;
+		
+		td {
+			color: #eee;
+			text-shadow: black 0 0 2px;
+		}
+	}
+
+	tbody tr.sel {
+		background-color: #555;
 		
 		td {
 			color: #eee;
@@ -73,7 +83,8 @@ table.movies {
 	}
 
 	.poster {
-		box-shadow: 0 10px 6px -6px #777;
+		box-shadow: 0 10px 6px -6px #777,
+					0 0 1px rgba(0, 0, 0, 0.5);
 	}
 
 	.poster-small {
