added an option to navigate with the arrowkeys

--- a/css/style.less
+++ b/css/style.less
@@ -14,6 +14,13 @@ html,body {
 	margin-top: -1.8em;
 }
 
+.tip {
+	margin-top: -1em;
+	font-size: 9px;
+	display: block;
+	text-align: right;
+}
+
 body {
 	margin-top: 1.5em;
 	background-color: #eee;
